# hotspotchi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
scripts/: install.sh  uninstall.sh  upgrade.sh
src/hotspotchi/: __init__.py  characters.py  cli.py  config.py  exclusions.py  hotspot.py  mac.py  selection.py  ssid.py
src/hotspotchi/data/: characters.yaml
src/hotspotchi/web/: __init__.py  app.py  routes.py
src/hotspotchi/web/static/css/: daisyui.min.css
src/hotspotchi/web/templates/: index.html
tests/: __init__.py  conftest.py  test_characters.py  test_cli.py  test_config_loading.py  test_exclusions.py  test_hotspot.py  test_mac.py  test_selection.py  test_ssid.py  test_web_routes.py
