[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotspotchi"
version = "2.2.0"
description = "Tamagotchi Uni WiFi hotspot for meeting characters via Tama Search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "HotSpotchi Contributors" }
]
keywords = ["tamagotchi", "wifi", "raspberry-pi", "hotspot", "tamagotchi-uni"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "httpx>=0.24",
    "types-pyyaml>=6.0",
]
all = [
    "hotspotchi[web,dev]",
]

[project.scripts]
hotspotchi = "hotspotchi.cli:main"
hotspotchi-web = "hotspotchi.web.app:run_server"

[project.urls]
Homepage = "https://github.com/mensfeld/hotspotchi"
Documentation = "https://github.com/mensfeld/hotspotchi#readme"
Repository = "https://github.com/mensfeld/hotspotchi.git"
Issues = "https://github.com/mensfeld/hotspotchi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hotspotchi"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hotspotchi/**/*.py",
    "src/hotspotchi/**/*.yaml",
    "src/hotspotchi/web/static/**/*",
    "src/hotspotchi/web/templates/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hotspotchi"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/hotspotchi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
